--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@
 .current {
   color: #2196f3;
 }
+ul {
+  list-style: none;
+}
 
 /*-----ПЕРЕМЕННЫЕ-----*/
 :root {
@@ -36,14 +39,12 @@ body {
   font-size: 14px;
   background-color: var(--background-color-primary);
   letter-spacing: var(--latter-spacing-mean);
-  border: 1px solid #ececec;
 }
 
 /*-----HEDDER-----*/
 .header {
   background: #ffffff;
 }
-
 .logo-header {
   font-family: var(--font-family-logo);
   font-weight: 700;
@@ -97,6 +98,7 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-style: none;
+  cursor: pointer;
 }
 .text-button-hero {
   font-weight: 700;
@@ -115,6 +117,7 @@ a {
 }
 .studio-section-quality-list-header {
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
   color: var(--color-theme-light-primary);
   text-transform: uppercase;
@@ -177,19 +180,9 @@ a {
 /*-----FOOTER-----*/
 .footer {
   background: #2f303a;
-  width: 1600px;
-  height: 252px;
-  left: 0px;
-  top: 2097px;
 }
 address {
   font-style: normal;
-}
-/*.information {
-  width: 231px;
-  height: 81px;
-  left: 215px;
-  top: 2208px;*/
 }
 .logo-footer {
   font-family: var(--font-family-logo);
@@ -236,6 +229,7 @@ address {
   text-align: center;
   border-radius: 4px;
   color: #ffffff;
+  cursor: pointer;
 }
 .portfolio-filter {
   font-family: var(--font-family-primary);
@@ -245,6 +239,7 @@ address {
   text-align: center;
   letter-spacing: var(--latter-spacing-mean);
   color: #212121;
+  cursor: pointer;
 }
 /*-----СЕКЦИЯ ПРИМЕРЫ РАБО-----*/
 .portfolio-work-example-header {
