--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,8 @@ ul {
 }
 .button-properties:hover,
 .button-properties:focus {
-  color: #2196f3;
+  color: white;
+  background-color: #2196f3;
 }
 
 /*-----ПЕРЕМЕННЫЕ-----*/
@@ -227,12 +228,10 @@ address {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: var(--latter-spacing-mean);
-  background: var(--color-accent);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   text-align: center;
   border-radius: 4px;
-  color: #ffffff;
   cursor: pointer;
 }
 .portfolio-filter {
